load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle_binary", "gazelle")
load("//codegen:codegen.bzl", "codegen")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@com_github_tnarg_rules_cue//gazelle/cue:go_default_library"],
    msan = "off",
    pure = "off",
    race = "off",
    static = "off",
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/tnarg/cue_terraform
gazelle(
    name = "gazelle",
    gazelle = "//:gazelle_binary",
)

codegen(
    name = "codegen",
    providers = "//:providers.txt",
)
