load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("//codegen:codegen.bzl", "codegen")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@com_github_tnarg_rules_cue//gazelle/cue"],
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/tnarg/cue_terraform
gazelle(
    name = "gazelle",
    gazelle = "//:gazelle_binary",
)

codegen(
    name = "codegen",
    providers = "//:providers.txt",
)
