load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cue.go",
        "main.go",
    ],
    importpath = "github.com/tnarg/cue_terraform/codegen/cmd/cue-terraform-gen",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_iancoleman_strcase//:go_default_library",
        "@com_github_zclconf_go_cty//cty:go_default_library",
        "@org_cuelang_go//cue/ast:go_default_library",
        "@org_cuelang_go//cue/format:go_default_library",
        "@org_cuelang_go//cue/token:go_default_library",
    ],
)

go_binary(
    name = "cue-terraform-gen",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
