load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cue-terraform-gen_lib",
    srcs = [
        "cue.go",
        "main.go",
    ],
    importpath = "github.com/tnarg/cue_terraform/codegen/cmd/cue-terraform-gen",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_iancoleman_strcase//:strcase",
        "@com_github_zclconf_go_cty//cty",
        "@org_cuelang_go//cue/ast",
        "@org_cuelang_go//cue/format",
        "@org_cuelang_go//cue/token",
    ],
)

go_binary(
    name = "cue-terraform-gen",
    embed = [":cue-terraform-gen_lib"],
    visibility = ["//visibility:public"],
)
